--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Bootstrap Datepicker WebJar
+Bootstrap DateTime Picker WebJar
 
 More info: http://webjars.org
 
-Upstream: https://github.com/eternicode/bootstrap-datepicker
+Upstream: https://github.com/smalot/bootstrap-datetimepicker
